fix image overflow

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -607,4 +607,8 @@ and (min-width: 0px) //TODO
     font-weight: bold;
   }
 
+  img {
+    max-width: 100%;
+  }
+
 }
